--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,600;1,300&display=swap');
 
-*{
+* {
     font-family: 'Open Sans';
     margin: 0;
     padding: 0;
 }
 
+/*Efeito Slider*/
+.jumbotron {
+    color: lime;
+    font-family: "Courier";
+    font-size: 50px;
+    margin: 10px 0 0 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 27rem;
+    animation: type 4s steps(60, end);
+    margin-top: 200px;
+    margin-bottom: 310px;
+  
+}
+
+.jumbotron:nth-child(2) {
+    animation: type2 8s steps(60, end);
+}
+
+.jumbotron a {
+    color: lime;
+    text-decoration: none;
+}
+
+span {
+    animation: blink 1s infinite;
+}
+
+@keyframes type {
+    from {
+        width: 0;
+    }
+}
+
+@keyframes type2 {
+    0% {
+        width: 0;
+    }
+
+    50% {
+        width: 0;
+    }
+
+    100% {
+        width: 100;
+    }
+}
+
+@keyframes blink {
+    to {
+        opacity: .0;
+    }
+}
+
+::selection {
+    background: black;
+}
+
+/*Css home, profile and project*/
 header{
     background: #353535;
     height: 50px;
@@ -63,13 +122,10 @@ body main{
 }
 
 .card-container{
-    width: 100%;
-    padding: 15px 10px;
-}
-
-.ds-card-container{
-    width: 100%;
-
+    width: 95%;
+    padding: 10px 10px;
+    margin-bottom: 165px;
+    margin-left: 20px;
 }
 
 .row{
@@ -77,8 +133,15 @@ body main{
     padding-bottom: 50px;
 }
 
+.row h1{
+    padding-top: 20px;
+    font-size: 50px;
+    font-weight: bold;
+}
+.ds-card-container{
+    width: 100%;
+}
+
 .footer div p{
     font-size: 25px;
 }
-
-
